2004-12-04  Kazu Hirata  <kazu@cs.umass.edu>

	* gcse.c (gcse_main): Add a comment.

2004-12-04  Alan Modra  <amodra@bigpond.net.au>

	* mklibgcc.in: Build shared libgcc and shared libunwind in gcc/.
	Don't subst shlib_dir for SHLIB_LINK, SHLIBUNWIND_LINK,
	SHLIB_INSTALL, and SHLIBUNWIND_INSTALL.
	* config/i386/t-nwld (SHLIB_NAME): Use shlib_base_name in place of
	shlib_dir and shlib_so_name.
	* config/mips/t-slibgcc-irix (SHLIB_NAME): Likewise.
	* config/t-libunwind-elf (SHLIB_NAME): Likewise.
	* config/t-slibgcc-darwin (SHLIB_NAME): Likewise.
	* config/t-slibgcc-elf-ver (SHLIB_NAME): Likewise.
	* config/t-slibgcc-sld (SHLIB_NAME): Likewise.
	(SHLIB_LINK): Don't use shlib_dir when creating symlink.

2004-12-03  Roger Sayle  <roger@eyesopen.com>

	* doc/tm.texi (TARGET_DELEGITIMIZE_ADDRESS): Document target hook.

2004-12-03  Richard Henderson  <rth@redhat.com>

	* alias.c (component_uses_parent_alias_set): Rename from
	can_address_p.  Return bool.  Reverse the sense of the result.
	Reinstate the check for alias set zero.
	(get_alias_set): Update to match.
	* alias.h (component_uses_parent_alias_set): Likewise.
	* emit-rtl.c (set_mem_attributes_minus_bitpos): Likewise.
	* expr.c (expand_assignment): Likewise.
	* expr.h: Remove commented out prototypes that were moved to alias.h.

2004-12-03  Richard Henderson  <rth@redhat.com>

	* doc/tm.texi (TARGET_BUILD_BUILTIN_VA_LIST): New.
	(TARGET_CANNOT_FORCE_CONST_MEM): New.

2004-12-04  Alan Modra  <amodra@bigpond.net.au>

	PR middle end/18718
	* sched-rgn.c (schedule_region): Don't assume REG_SAVE_NOTEs are
	in pairs.
	* sched-ebb.c (schedule_ebb): Likewise.

2004-12-03  Andreas Schwab  <schwab@suse.de>

	* Makefile.in (HOSTHOOKS_DEF_H): Define.
	(ggc-common.o): Depend on $(HOSTHOOKS_DEF_H).
	(host-default.o): Likewise.

2004-12-03  Eric Christopher  <echristo@redhat.com>

	* config/stormy16/stormy16.md (pushqi, popqi, pushhi,
	pophi): Add number of arguments to name so that the
	pattern is recognized as a named pattern.